// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/List Defaults smoke-test 1`] = `
<div data-test-block="true">
  <ul class="List_list__xzA1c List_list_withBullet__s5lqA  ">
    <li class="ListElement_element__mEewo ">
      Kjenner du behovet til brukeren?
    </li>
    <li class="ListElement_element__mEewo ">
      Er du sikker på at du kjenner behovet til brukeren?
    </li>
    <li class="ListElement_element__mEewo ">
      Snakk med andre.
    </li>
  </ul>
</div>
`;

exports[`Tester/List VariantNumber smoke-test 1`] = `
<div data-test-block="true">
  <ol class="List_list__xzA1c   ">
    <li class="ListElement_element__mEewo ">
      Kjenner du behovet til brukeren?
    </li>
    <li class="ListElement_element__mEewo ">
      Er du sikker på at du kjenner behovet til brukeren?
    </li>
    <li class="ListElement_element__mEewo ">
      Snakk med andre.
    </li>
  </ol>
</div>
`;

exports[`Tester/List WithBothVariantSpacingAndAtLeast10NumberItems smoke-test 1`] = `
<div data-test-block="true">
  <p class="Paragraph_paragraph__NPzKO Paragraph_paragraph_standard__ObBkf  ">
    Her kan du se hvordan de forskjellige variantene til en list ser ut sammen med andre elementer med veksling av luft under listene.
  </p>
  <ul class="List_list__xzA1c List_list_withBullet__s5lqA  ">
    <li class="ListElement_element__mEewo ">
      Kjenner du behovet til brukeren?
    </li>
    <li class="ListElement_element__mEewo ">
      Er du sikker på at du kjenner behovet til brukeren?
    </li>
    <li class="ListElement_element__mEewo ">
      Snakk med andre.
    </li>
    <li class="ListElement_element__mEewo ">
      Kjenner du behovet?
    </li>
  </ul>
  <p class="Paragraph_paragraph__NPzKO Paragraph_paragraph_standard__ObBkf  ">
    Den første listen kan veksle mellom variantene en liste har.
  </p>
  <ol class="List_list__xzA1c   ">
    <li class="ListElement_element__mEewo ">
      Kjenner du behovet til brukeren?
    </li>
    <li class="ListElement_element__mEewo ">
      Er du sikker på at du kjenner behovet til brukeren?
    </li>
    <li class="ListElement_element__mEewo ">
      Snakk med andre
    </li>
    <li class="ListElement_element__mEewo ">
      Kjenner du behovet?
    </li>
    <li class="ListElement_element__mEewo ">
      Er du sikker på at du kjenner behovet til brukeren?
    </li>
    <li class="ListElement_element__mEewo ">
      Snakk med andre når som helst
    </li>
    <li class="ListElement_element__mEewo ">
      Kjenner du behovet?
    </li>
    <li class="ListElement_element__mEewo ">
      Er du sikker på at du kjenner behovet til brukeren?
    </li>
    <li class="ListElement_element__mEewo ">
      Snakk med andre ofte
    </li>
    <li class="ListElement_element__mEewo ">
      Snakk med andre aldri
    </li>
  </ol>
  <p class="Paragraph_paragraph__NPzKO Paragraph_paragraph_standard__ObBkf  ">
    Videre så er en liste med lenker også tatt med for å se hvordan det hele ser ut sammen.
  </p>
  <ul class="LinkGroup_linkGroup__ZiEgs   ">
    <li class="LinkGroup_linkGroupItem__Y7SjF">
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz LinkGroup_icon__cSIB- LinkGroup_icon_forward__ErPTi "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M1.8 12.6v-1.8h16.8l-5.2-5.1 1.4-1.3 7.5 7.3-7.7 7.3-1.4-1.3 5.2-5.1H1.8Z">
        </path>
      </svg>
      <a class="Link_link__jeUpY  "
         href="#root"
      >
        Er du pendler?
      </a>
    </li>
    <li class="LinkGroup_linkGroupItem__Y7SjF">
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz LinkGroup_icon__cSIB- LinkGroup_icon_forward__ErPTi "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M1.8 12.6v-1.8h16.8l-5.2-5.1 1.4-1.3 7.5 7.3-7.7 7.3-1.4-1.3 5.2-5.1H1.8Z">
        </path>
      </svg>
      <a class="Link_link__jeUpY  "
         href="#root"
      >
        Pendler du mye?
      </a>
    </li>
    <li class="LinkGroup_linkGroupItem__Y7SjF">
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz LinkGroup_icon__cSIB- LinkGroup_icon_forward__ErPTi "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M1.8 12.6v-1.8h16.8l-5.2-5.1 1.4-1.3 7.5 7.3-7.7 7.3-1.4-1.3 5.2-5.1H1.8Z">
        </path>
      </svg>
      <a class="Link_link__jeUpY  "
         href="#root"
      >
        Pendler du dagen lang?
      </a>
    </li>
  </ul>
</div>
`;

exports[`Tester/List WithCustomCss smoke-test 1`] = `
<div data-test-block="true">
  <ul class="List_list__xzA1c List_list_withBullet__s5lqA  dummyClassname">
    <li class="ListElement_element__mEewo ">
      Kjenner du behovet til brukeren?
    </li>
    <li class="ListElement_element__mEewo ">
      Er du sikker på at du kjenner behovet til brukeren?
    </li>
    <li class="ListElement_element__mEewo ">
      Snakk med andre.
    </li>
  </ul>
</div>
`;

exports[`Tester/List WithDataTestid smoke-test 1`] = `
<div data-test-block="true">
  <ul class="List_list__xzA1c List_list_withBullet__s5lqA  "
      data-testid="ListID"
  >
    <li class="ListElement_element__mEewo ">
      Kjenner du behovet til brukeren?
    </li>
    <li class="ListElement_element__mEewo ">
      Er du sikker på at du kjenner behovet til brukeren?
    </li>
    <li class="ListElement_element__mEewo ">
      Snakk med andre.
    </li>
  </ul>
</div>
`;

exports[`Tester/List WithId smoke-test 1`] = `
<div data-test-block="true">
  <ul id="ListId"
      class="List_list__xzA1c List_list_withBullet__s5lqA  "
  >
    <li class="ListElement_element__mEewo ">
      Kjenner du behovet til brukeren?
    </li>
    <li class="ListElement_element__mEewo ">
      Er du sikker på at du kjenner behovet til brukeren?
    </li>
    <li class="ListElement_element__mEewo ">
      Snakk med andre.
    </li>
  </ul>
</div>
`;

exports[`Tester/List WithLang smoke-test 1`] = `
<div data-test-block="true">
  <ul class="List_list__xzA1c List_list_withBullet__s5lqA  "
      lang="nb"
  >
    <li class="ListElement_element__mEewo ">
      Kjenner du behovet til brukeren?
    </li>
    <li class="ListElement_element__mEewo ">
      Er du sikker på at du kjenner behovet til brukeren?
    </li>
    <li class="ListElement_element__mEewo ">
      Snakk med andre.
    </li>
  </ul>
</div>
`;

exports[`Tester/List WithLongTextAndBreaking smoke-test 1`] = `
<div data-test-block="true">
  <ul class="List_list__xzA1c List_list_withBullet__s5lqA  ">
    <li class="ListElement_element__mEewo ">
      Denne listItem har en veldig lang tekst. Så lang at den lange teksten tvinger fram linjeskift med tekst som alltid er venstrejustert, brekke over flere linjer og får et hengende innrykk.
    </li>
    <li class="ListElement_element__mEewo ">
      DennelistItemharenveldiglangtekst.Sålangatdentvingerframlinjeskiftmedtekstsomalltidervenstrejustertbrekkeoverflerelinjerogfårethengendeinntrykk.
    </li>
  </ul>
</div>
`;

exports[`Tester/List WithMarkup smoke-test 1`] = `
<div data-test-block="true">
  <ul class="List_list__xzA1c List_list_withBullet__s5lqA  ">
    <li class="ListElement_element__mEewo ">
      Kjenner du behovet til
      <strong>
        brukeren?
      </strong>
    </li>
    <li class="ListElement_element__mEewo ">
      Behovet til brukeren er veldig viktig.
      <a href="#root">
        Er du sikker på at du kjenner behovet til brukeren?
      </a>
    </li>
    <li class="ListElement_element__mEewo ">
      Snakk med andre om
      <em>
        italic,
      </em>
      <mark>
        mark og
      </mark>
      <code>
        code blokk
      </code>
      bare på gøy
    </li>
  </ul>
</div>
`;

exports[`Tester/List WithRef smoke-test 1`] = `
<div data-test-block="true">
  <ul class="List_list__xzA1c List_list_withBullet__s5lqA  "
      id="dummyIdForwardedFromRef"
  >
    <li class="ListElement_element__mEewo ">
      Kjenner du behovet til brukeren?
    </li>
    <li class="ListElement_element__mEewo ">
      Er du sikker på at du kjenner behovet til brukeren?
    </li>
    <li class="ListElement_element__mEewo ">
      Snakk med andre.
    </li>
  </ul>
</div>
`;

exports[`Tester/List WithSpacing smoke-test 1`] = `
<div data-test-block="true">
  <p class="Paragraph_paragraph__NPzKO Paragraph_paragraph_standard__ObBkf Paragraph_paragraph_hasSpacingLarge__6x1nL ">
    Jeg er et tekstavsnitt uten innrykk. Denne teksten skulle bli ca. to linjer lang, men jeg trenger litt mer innhold for å bli to linjer lang. Derfor fortsetter jeg å skrive på dette tekstavsnittet uten innrykk og etter en stund blir denne teksten ca to linjer lang.
  </p>
  <ul class="List_list__xzA1c List_list_withBullet__s5lqA List_list_hasSpacing__a4Kcg ">
    <li class="ListElement_element__mEewo ">
      Kjenner du behovet til brukeren?
    </li>
    <li class="ListElement_element__mEewo ">
      Er du sikker på at du kjenner behovet til brukeren?
    </li>
    <li class="ListElement_element__mEewo ">
      Snakk med andre.
    </li>
  </ul>
  <p class="Paragraph_paragraph__NPzKO Paragraph_paragraph_standard__ObBkf  ">
    Jeg er et tekstavsnitt uten innrykk. Denne teksten skulle bli ca. to linjer lang, men jeg trenger litt mer innhold for å bli to linjer lang. Derfor fortsetter jeg å skrive på dette tekstavsnittet uten innrykk og etter en stund blir denne teksten ca to linjer lang.
  </p>
</div>
`;
